--- a/views/index.ejs
+++ b/views/index.ejs
@@ -697,7 +697,7 @@
 
                 <div ng-hide="!isLoggedIn()">
                     <!--{{formatForm}}-->
-                    {{userCriterias}}
+                    <!--{{userCriterias}}-->
                     <div ng-repeat="section in sections">
                         <b><h3>{{section.num+'.'+section.name}}</h3></b>
                         <!--<button type="button" ng-click="toggle(sectionUser)" ng-show="!sectionUser.toggle" class="btn-primary">הצג קריטריונים</button>
@@ -716,26 +716,25 @@
                                 <!--iterate on all form criteria-->
                                 <tr ng-show="userCriteria.formatCriteria===formatCriteria._id" ng-repeat="userCriteria in userCriterias">
                                     <!--iterate on each row inside each criteria-->
-
                                     <td>
                                         <table>
                                             <tr ng-repeat="dataRow in userCriteria.data track by $index">
-                                                <td><button class="btn-danger" ng-click="removeFields(dataRow, userCriteria.data)">הסר</button></td>
+                                                <td><button class="btn-danger" ng-click="removeRow(dataRow, userCriteria.data)">הסר</button></td>
                                                 <td ng-repeat="data in dataRow">
                                                     <span ng-show="data.dataType==='String'">
                                                         <input type="text" placeholder="{{data.fieldText}}" ng-model="data.fieldInput" />
                                                     </span>
 
                                                     <span ng-show="data.dataType==='Link'">
-                                                        <input type="text" ng-model="data.fieldInput" />
+                                                        <input type="text" placeholder="{{data.fieldText}}" ng-model="data.fieldInput" />
                                                     </span>
 
                                                     <span ng-show="data.dataType==='Number'">
-                                                        <input type="number" ng-model="data.fieldInput" />
+                                                        <input type="number" placeholder="{{data.fieldText}}" ng-model="data.fieldInput" />
                                                     </span>
 
                                                     <span ng-show="data.dataType==='Date'">
-                                                        <md-datepicker md-placeholder="בחר תאריך" ng-model="data.fieldInput"></md-datepicker>
+                                                        <md-datepicker md-placeholder="{{data.fieldText}}" ng-model="data.fieldInput"></md-datepicker>
                                                     </span>
                                                 </td>
                                             </tr>
