--- a/views/index.ejs
+++ b/views/index.ejs
@@ -716,6 +716,7 @@
                                 <!--iterate on all form criteria-->
                                 <tr ng-show="userCriteria.formatCriteria===formatCriteria._id" ng-repeat="userCriteria in userCriterias">
                                     <!--iterate on each row inside each criteria-->
+                                    <!--<td>{{userCriteria._id}}</td>-->
                                     <td>
                                         <table>
                                             <tr ng-repeat="dataRow in userCriteria.data track by $index">
@@ -730,7 +731,8 @@
                                                     </span>
 
                                                     <span ng-show="data.dataType==='Number'">
-                                                        <input type="number" placeholder="{{data.fieldText}}" ng-model="data.fieldInput" />
+                                                        <!--<input type="number" placeholder="{{data.fieldText}}" ng-model="data.fieldInput" />-->
+                                                        <input placeholder="{{data.fieldText}}" ng-model="data.fieldInput" />
                                                     </span>
 
                                                     <span ng-show="data.dataType==='Date'">
