--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,12 +21,13 @@
     <script src="/static_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="/static_components/ng-csv/build/ng-csv.min.js"></script>
     <script src="/static_components/moment/min/moment.min.js"></script>
+    <script src="/static_components/angular-toastr/dist/angular-toastr.tpls.js"></script>
 
     <script src="/javascripts/angularApp.js"></script>
     <link href="/static_components/angular-material/angular-material.css" rel="stylesheet">
     <link href="/static_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="/stylesheets/style.css" rel="stylesheet">
-
+    <link href="/static_components/angular-toastr/dist/angular-toastr.min.css" rel="stylesheet" />
 
 
 </head>
